adding tweet link to index.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -18,6 +18,8 @@
         <h2> Facts about me</h2>
 
         <h3> My Software engineer journey</h3>
+
+        <a href="file:///C:/Users/HP/Desktop/alx_html_css/html_basic/tweets.html"> Tweets</a>
     </body>
 
 </html>
