--- a/html_basic/base_index.html
+++ b/html_basic/base_index.html
@@ -3,10 +3,12 @@
 <html> 
 
     <head> 
+        <meta charset="utf-8"/>
         <title>Building My First Webpage</title>
     </head>
 
     <body>
-
+        
     </body>
+
 </html>
