--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -3,13 +3,31 @@
 <html> 
 
     <head> 
+        <meta charset="utf-8">
         <title>Building My First Webpage</title>
     </head>
 
     <body>
+        <header>
+            <h4>Discover Me</h4>
+                    <ul>
+                        <li><a href="base_index.html">Goto Base main</a></li> 
+                        <li><a href="tweets.html">Goto tweets</a></li> 
+                        <li><a href="index.html">Goto Home</a></li> 
+                    </ul>   
+         </header>
+         <main> 
+            <article> 
         <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Discover Me - A Top Rated <a href="https://twitter.com/hashtag/Web3?src=hash&amp;ref_src=twsrc%5Etfw">#Web3</a> Marketer in <a href="https://twitter.com/Upwork?ref_src=twsrc%5Etfw">@Upwork</a><br><br>This thread narrates my story as a curious beginner to becoming a <a href="https://twitter.com/hashtag/crypto?src=hash&amp;ref_src=twsrc%5Etfw">#crypto</a> marketing specialist, and community manager.<br><br>In addition, it contains my expertise, services &amp; resume, and I&#39;m open to work<br><br>Let’s begin…<br><br>0/5 <a href="https://t.co/lluLV1x4Hr">pic.twitter.com/lluLV1x4Hr</a></p>&mdash; Johnmiracle | Web3 Marketing Specialist (@johnmiracleweb3) <a href="https://twitter.com/johnmiracleweb3/status/1682392447064612864?ref_src=twsrc%5Etfw">July 21, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-        <a href="file:///C:/Users/HP/Desktop/alx_html_css/html_basic/index.html">home</a>
+        <a href="index.html">home</a>
+        </article>
+        <aside>
+            <p>Placeholder to add comment thread later</p>
+        </aside>
+        </main>
     </body>
-
+    <footer>
+        <P> Made by Johnmiracle Ejikeme <a href="index.html" target="_blank">here</a> </p>
+     </footer> 
 </html>
