--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -1,28 +1,264 @@
 <!DOCTYPE html>
-<html>
-    <head> 
-        <meta charset="utf-8"> 
-        <title> </title> 
-    </head>
+<html lang="en">
 
-    <body> 
-        <header> <a href=""> <source> </a> </header>
-        <main> 
-            <section> </section>
-            <section> <blockquote> </blockquote> </section>
-            <section>  
-                <h2> </h2>]
-
-            </section>
-            <section> 
-                <h2> </h2>
-            </section>
-            <section> 
-
-            </section>
-        </main>
-        <footer> 
-            
-        </footer>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Public Speaking</title>
+</head>
+<body>
+    <header>
+        <div>
+            <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+            alt="public speaking "></a>
+            <a href="#">link</a>
+            <a href="#">link</a>
+            <a href="#">link</a>
+        </div>  
+    </header>
+    <main>
+        <section>
+            <div>
+                <h1>Speaking at Abia State</h1>
+                <p>Public speaking is a life skill</p>
+                <button>click here</button>
+            </div>
+            <div>
+                <h2>I'm Johnmiracle Ejikeme</h2>
+                <div>
+                    <div>
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                            alt="public speaking "></a>
+                        <h3>my name</h3>
+                        <p>Reading as a hobby</p>
+                    </div>
+                    <div>
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                            alt="public speaking "></a>
+                        <h3>I love what I do</h3>
+                        <p>Public speaking is learnable</p>
+                    </div>
+                    <div>
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                            alt="public speaking "></a>
+                        <h3>You too can speak</h3>
+                        <p>You only need to learn</p>
+                    </div>
+                    <div>
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                            alt="public speaking "></a>
+                        <h3>Buy a public speaking course</h3>
+                        <p>learn and become a speaker</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div>
+                <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                    alt="public speaking "></a>
+                <div>
+                        <blackquote>Everyone is a public speaker
+                    <p>Johnmiracle Ejikeme quote</p>
+                    <p>So learn it</p> 
+                </div>
+            </div>
+        </section>
+        <section>
+            <h1>Travelling</h1>
+            <div>
+                <div>
+                    <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                        alt="public speaking "></a>
+                  <h2>I'm a Speaker</h2>
+                  <p>I speak for a living</p> 
+                  <div>
+                    <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                        alt="public speaking "></a>
+                     <h3>Pass me the mic</h3>
+                  </div>
+                  <div>
+                     <div>
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                            alt="public speaking "></a>★
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                                alt="public speaking "></a>★
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                                    alt="public speaking "></a>★
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                                        alt="public speaking "></a>★
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                                            alt="public speaking "></a>★
+                      <p>Will you learn public speaking</p> 
+                     </div>
+                  </div>
+                </div>
+                <div>
+                    <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                        alt="public speaking "></a>
+                  <h2>Life skills</h2>
+                  <p>They are so many life skills</p> 
+                  <div>
+                    <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                        alt="public speaking "></a>
+                   <h3>Driving as a live skill</h3>
+                  </div>
+                  <div>
+                     <div>
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                            alt="public speaking "></a>★
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                                alt="public speaking "></a>★
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                                    alt="public speaking "></a>★
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                                        alt="public speaking "></a>★
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                                            alt="public speaking "></a>★
+                      <p>On to the next</p> 
+                     </div>
+                  </div>
+                </div>
+                <div>
+                    <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                        alt="public speaking "></a>
+                  <h2>Sweet living</h2>
+                  <p>A peacefull way to live</p> 
+                  <div>
+                    <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                        alt="public speaking "></a>
+                   <h3>Wanna try it</h3>
+                  </div>
+                  <div>
+                     <div>
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                            alt="public speaking "></a>★
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                                alt="public speaking "></a>★
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                                    alt="public speaking "></a>★
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                                        alt="public speaking "></a>★
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                                            alt="public speaking "></a>★
+                      <p>On tothe next</p> 
+                     </div>
+                  </div>
+                </div>
+                <div>
+                    <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                        alt="public speaking "></a>
+                  <h2>FAvoour e</h2>
+                  <p>Mercy</p> 
+                  <div>
+                    <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                        alt="public speaking "></a>
+                    <h3>blee</h3>
+                  </div>
+                  <div>
+                     <div>
+                    <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                            alt="public speaking "></a>★
+                    <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                                alt="public speaking "></a>★
+                    <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                                    alt="public speaking "></a>★
+                    <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                                        alt="public speaking "></a>★
+                    <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                                            alt="public speaking "></a>★
+                      <p>Moving forward</p> 
+                     </div>
+                  </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h1>The least</h1>
+            <div>
+                <div>
+                    <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                        alt="public speaking "></a>
+                  <h2>It's done</h2>
+                  <p>Gome</p> 
+                </div>
+                <div>
+                    <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                        alt="public speaking "></a>
+                    <h2>Favour</h2>
+                    <p>Blessing</p> 
+                </div>
+                <div>
+                    <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                        alt="public speaking "></a>
+                    <h2>mine</h2>
+                    <p>Reading</p> 
+                </div>
+                <div>
+                    <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                        alt="public speaking "></a>★
+                    <h2>Gift</h2>
+                    <p>Blessing</p> 
+                </div>
+            </div>
+            <button>
+            </button>
+        </section>
+        <section>
+            <h1>Michee</h1>
+            <div>
+                <div>
+                    <div>
+                        <div>
+                            <h2>Working </h2>
+                            <p>Working</p>
+                        </div>
+                        <div>
+                            <h2>working down the isle</h2>
+                            <p>faithful</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <div>
+                            <h2>Joy</h2>
+                            <p>That is my name</p>
+                        </div>
+                        <div>
+                            <h2>Favour</h2>
+                            <p>Paddy</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div>
+            <div>
+                 <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3369-3.jpg"
+                       alt="outside viewc "></a>
+                       <a href="#">link</a>
+                       <a href="#">link</a>
+                       <a href="#">link</a>
+                 <div>
+                    <img src="images/IMG_3377-3.jpg"
+                        alt="our view ">
+                    <div>
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3378-3.jpg"
+                             alt="love "></a>
+                        <a href="https://google.com"><img src="images/IMG_3378-3.jpg"
+                             alt="love"></a>
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3383-3.jpg/a>"
+                            alt="love"></a>
+                        <a href="https://johnmiracleejikeme.com"><img src="images/IMG_3384-3.jpg"
+                            alt="love"></a>
+                    </div>
+                    <p>Public Speaking</p>
+                 </div>
+            </div>
+        </div>
+    </footer>
+</body>
 </html>
